--- a/src/main/resources/view/package.json
+++ b/src/main/resources/view/package.json
@@ -38,6 +38,7 @@
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
+    "prop-types": "^15.7.2",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
