--- a/build.gradle
+++ b/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok:1.18.8')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('com.jayway.jsonpath:json-path')
+    testCompile('org.springframework.security:spring-security-test:4.0.0.RELEASE')
 }
 
