--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('com.jayway.jsonpath:json-path')
     testCompile('org.springframework.security:spring-security-test:4.0.0.RELEASE')
+    implementation 'junit:junit:4.12'
 }
